--- a/billing/src/renderer/index.html
+++ b/billing/src/renderer/index.html
@@ -6,7 +6,7 @@
     <!-- Allow styles from self and from the Tailwind CDN, if applicable -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; connect-src 'self' http://192.168.1.27:3000; style-src 'self' 'unsafe-inline';"
+      content="default-src 'self'; connect-src 'self' https://billing-software-henna.vercel.app; style-src 'self' 'unsafe-inline';"
     />
   </head>
 
