user schema and order fix

--- a/billing/src/renderer/index.html
+++ b/billing/src/renderer/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <title>Billing</title>
     <!-- Allow styles from self and from the Tailwind CDN, if applicable -->
-    <meta
+    <!-- <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; connect-src 'self' https://billing-software-henna.vercel.app; style-src 'self' 'unsafe-inline';"
+    /> -->
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; connect-src 'self' http://localhost:3000; style-src 'self' 'unsafe-inline';"
     />
   </head>
 
